tests/errmsgs/t20283.nim
discard """
errormsg: "selector must be of an ordinal type, float or string"
"""
case @[]
else: discard